Adds styling and routing for static pages

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,8 +1,12 @@
-<% provide(:title, 'Contact') %>
+<% provide( :title, 'Contact' ) %>
 
 <h1>
-	Contact Me
+	Contact
 </h1>
 <p>
-	Just kidding. I'm not providing a way to contact me. This is just a tutorial, after all.
+	Contact Ruby on Rails Tutorial about the sample app at the
+	<a href="http://railstutorial.org/contact">
+		contact page
+	</a>
+	.
 </p>
