Adds user sign up functionality

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
 		Tutorial Home Page
 	</h1>
 	<h2>
-		Welcome to the sample application! This is the home page for the 
+		Welcome to the home page for the 
 		<a href="http://railstutorial.org/">
 			Ruby on Rails Tutorial
 		</a> 
