--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,12 +1,26 @@
 @import "bootstrap";
 
+/* VARIABLES */
+
 $lightGray:			#999999;
 $mediumLightGray:	#eaeaea;
 $gray: 				#555555;
 $mediumGray: 		#222222;
 $white: 			#ffffff;
 
+/* MIX-INS */
+
+@mixin box_sizing {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 /* CLASS STYLES */
+
+.alert {
+	margin: 10px;
+}
 
 .center {
 	text-align: center;
@@ -98,4 +112,71 @@ section {
 
 textarea {
   resize: vertical;
+}
+
+/* SIDEBAR */
+
+aside {
+	section {
+		padding: 10px 0px;
+		border-top: 1px solid $lightGray;
+		&:first-child {
+			border: 0px;
+			padding-top: 0px;
+		}
+		h1 {
+			font-size: 1.4em;
+			text-align: left;
+			letter-spacing: -1px;
+			margin-bottom: 3px;
+			margin-top: 0px;
+			padding-top: 10px;
+		}
+		span {
+			display: block;
+			line-height: 1;
+			margin-bottom: 3px;
+		}
+	}
+}
+
+.gravatar {
+	float: left;
+	margin-right: 10px;
+}
+
+/* FORMS */
+
+#error_explanation {
+	color: #f00000;
+	ul {
+		list-style: none;
+		margin: 0px 0px 18px 0px;
+	}
+}
+
+.field_with_errors {
+	@extend .control-group;
+	@extend .error;
+}
+
+input, textarea, select, .uneditable-input {
+	border: 1px solid #bbbbbb;
+	width: 100%;
+	margin-bottom: 15px;
+	@include box_sizing;
+}
+
+input {
+	height: auto !important;
+}
+
+/* MISCELLANEOUS */
+
+.debug_dump {
+	clear: both;
+	float: left;
+	width: 100%;
+	margin-top: 45px;
+	@include box_sizing;
 }
