--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,20 +12,20 @@
 					</li>
 					<% if ( signed_in?(  ) ) %>
 						<li>
-							<%= link_to "Users", '#' %>
+							<%= link_to "Users", users_path %>
 						</li>
 						<li id="fat-menu" class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								Account 
 								<b class="caret">
-								</b>00
+								</b>
 							</a>
 							<ul class="dropdown-menu">
 								<li>
-									<%= link_to "Profile", current_user %>
+									<%= link_to "Profile", current_user(  ) %>
 								</li>
 								<li>
-									<%= link_to "Settings", '#' %>
+									<%= link_to "Settings", edit_user_path( current_user(  ) ) %>
 								</li>
 								<li class="divider">
 								</li>
@@ -36,7 +36,7 @@
 						</li>
 					<% else %>
 						<li>
-							<%= link_to( "Sign In", 'signin_path' ) %>
+							<%= link_to( "Sign In", signin_path ) %>
 						</li>
 					<% end %>
 				</ul>
