--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,21 +5,8 @@
 </h1>
 <div class="row">
 	<div class="span6 offset3">
-		<%= render 'shared/error_messages' %>
 		<%= form_for( @user ) do | f | %>
-
-			<%= f.label( :name ) %>
-			<%= f.text_field( :name ) %>
-			
-			<%= f.label( :email ) %>
-			<%= f.text_field( :email ) %>
-			
-			<%= f.label( :password ) %>
-			<%= f.password_field( :password ) %>
-			
-			<%= f.label( :password_confirmation, "Confirm Password" ) %>
-			<%= f.password_field( :password_confirmation ) %>
-			
+			<%= render( "fields", { :f => f } ) %>
 			<%= f.submit "Create My Account", class: "btn btn-large btn-primary" %>
 		<% end %>
 	</div>
