--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,6 +29,28 @@ $white: 			#ffffff;
 	}
 }
 
+.content {
+	display: block;
+}
+
+.gravatar {
+	float: left;
+	margin-right: 10px;
+}
+
+.microposts {
+	list-style: none;
+	margin: 10px 0px 0px 0px;
+	li {
+		padding: 10px;
+		border-top: 1px solid #e8e8e8;
+	}
+}
+
+.timestamp {
+	color: $lightGray;
+}
+
 .users {
 	list-style: none;
 	margin: 0px;
@@ -151,11 +173,10 @@ aside {
 			margin-bottom: 3px;
 		}
 	}
-}
-
-.gravatar {
-	float: left;
-	margin-right: 10px;
+	textarea {
+		height: 100px;
+		margin-bottom: 5px;
+	}
 }
 
 /* FORMS */
